<resources>
    <string name="app_name">Menu</string>
    <string name="action_logout">Logout</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">LOGIN</string>
    <string name="username_hint">Username</string>
    <string name="register_button_text">register</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome">Welcome</string>
    <string name="products_item">Products</string>
    <string name="meal">Meals</string>
    <string name="menus">Menus</string>
    <string name="shopping_lists">Shopping lists</string>
    <string name="delete_product_alert">Are you sure you want to delete this product? All meals that contain it will be also deleted</string>
    <string name="name_hint">Name</string>
    <string name="save_button_text">save</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="add">Add</string>
    <string name="recipe_hint">Recipe</string>
    <string name="cumulative_number_of_kcal_hint">Cumulative number of kcal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_or_edit_menu">Create menu</string>
    <string name="date_hint">e.g. 2016-01-01</string>
    <string name="breakfast">Breakfast:</string>
    <string name="lunch">Lunch:</string>
    <string name="dinner">Dinner:</string>
    <string name="teatime">Teatime:</string>
    <string name="supper">Supper:</string>
    <string name="menu_name_hint">Menu name</string>
    <string name="reports">Reports</string>
    <string name="new_name_hint">new name</string>
    <string name="delete_daily_menu_button">delete daily menu</string>
    <string name="breakfastCheckbox">breakfast</string>
    <string name="lunchCheckbox">lunch</string>
    <string name="dinnerCheckbox">dinner</string>
    <string name="teatimeCheckbox">teatime</string>
    <string name="supperCheckbox">supper</string>
    <string name="kcal">kcal</string>
    <string name="g">g</string>
    <string name="protein_label_text">Proteins [p]:</string>
    <string name="carbos_label">Carbos [c]:</string>
    <string name="fat_label">Fat [f]:</string>
    <string name="amount_hint">Amount</string>
    <string name="show_meal_title">Show meal</string>
    <string name="kcalLabel">Kcal:</string>
    <string name="amount_of_servings">Amount of servings:</string>
    <string name="calories">Calories:</string>
    <string name="default_value_for_amount">1</string>
    <string name="edit_daily_menu_button_text">edit daily menu</string>
    <string name="date_label">Date:</string>
    <string name="update_product">update product</string>
    <string name="delete_meal">delete meal</string>
    <string name="add_meal_to_daily_menu">add meal to daily menu</string>
    <string name="empty_fridge_alert">Your fridge is empty!</string>
    <string name="delete_product_from_fridge">delete_product_from_fridge</string>
    <string name="edit_quantity_of_product">edit_quantity_of_product</string>
    <string name="kcal_100g">kcal/100g</string>
    <string name="g_100g">g/100g</string>
    <string name="restore">Restore</string>
    <string name="sure_to_restore">Are you sure you want to restore backup?</string>
    <string name="backup">backup</string>
    <string name="search_products">Search products</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="choose_date">choose date</string>
    <string name="products_to_buy">Products to buy</string>
    <string name="already_bought_products">Already bought products</string>
    <string name="products_already_on_shopping_lists">Products already on Shopping Lists</string>
    <string name="eaten_products">Eaten products</string>
    <string name="not_eaten_products">Not eaten products</string>
    <string name="extra_shelf">extra shelf</string>
    <string name="ok">ok</string>
    <string name="from_label">FROM:</string>
    <string name="to_label">TO:</string>
    <string name="add_products">add products</string>
</resources>
