<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/products_item" />
        <item
            android:id="@+id/nav_meal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/meal" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menus" />
        <item
            android:id="@+id/nav_shoppingList"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/shopping_lists" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
