<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBackgroundColor"
    tools:context=".user.screens.login.LoginActivity">

    <EditText
        android:id="@+id/loginEditText"
        android:hint="@string/login_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/loginButton"
        android:text="@string/login_button_text"
        android:layout_gravity="center_horizontal"
        style="@style/wideButtonStyle"/>
    <Button
        android:id="@+id/registerButton"
        android:text="@string/register_button_text"
        android:layout_gravity="center_horizontal"
        style="@style/wideButtonStyle"/>
</LinearLayout>
