<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBackgroundColor"
    tools:context="com.example.dell.menu.screens.register.RegisterActivity">

    <EditText
        android:id="@+id/registerUsernameEditText"
        android:hint="@string/username_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/registerPasswordEditText"
        android:hint="@string/password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/registerButton"
        android:text="@string/register_button_text"
        style="@style/wideButtonStyle"/>
</LinearLayout>
