<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundColor">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.TabLayout
            android:id="@+id/shelvesTabLayout"
            android:background="?attr/colorPrimary"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:tabGravity="fill"
            app:tabMode="scrollable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/shelvesViewPager"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        android:id="@+id/choosePeriodRelativeLayout"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/messageTextView"
            tools:text="Choose period to display"
            android:textSize="20sp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_below="@+id/messageTextView"
            android:id="@+id/fromLayout"
            android:paddingBottom="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/startOfPeriodLabelTextView"
            android:text="@string/from_label"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/startFromEditText"
            android:enabled="false"
           android:hint="@string/from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/startOfPeriodImageButton"
            android:contentDescription="@string/choose_date"
            android:src="@drawable/ic_calendar"
            android:background="@color/appBackgroundColor"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/fromLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/endOfPeriodLabelTextView"
            android:text="@string/to_label"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/endEditText"
            android:enabled="false"
            android:hint="@string/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/endOfPeriodCalendarImageButton"
            android:src="@drawable/ic_calendar"
            android:layout_gravity="center_vertical"
            android:background="@color/appBackgroundColor"
            android:contentDescription="@string/choose_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/okButton"
            android:layout_above="@+id/extraShelfButton"
            android:text="@string/ok"
            style="@style/wideButtonStyle"
            />
        <Button
            android:id="@+id/extraShelfButton"
            android:text="@string/extra_shelf"
            style="@style/wideButtonStyle"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</LinearLayout>