<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_or_edit_meal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBackgroundColor"
    tools:context="com.example.dell.menu.screens.meals.addOrEdit.AddOrEditMealActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:id="@+id/addedMealNameEditText"
        android:hint="@string/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cumulativeNumberOfKcalEditText"
        android:hint="@string/cumulative_number_of_kcal_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/addedMealRecipeEditText"
        android:hint="@string/recipe_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/addProductsTextView"
            android:text="Add products: "
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/addProductsButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_add"
            style="@style/buttonStyle"/>

        <android.support.v7.widget.RecyclerView
            android:paddingTop="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:id="@+id/addedProductsRecyclerView"
            android:layout_below="@id/addProductsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/saveMealButton"
            android:layout_below="@+id/addedProductsRecyclerView"
            android:text="@string/save_button_text"
            style="@style/wideButtonStyle" />

        <Button
            android:id="@+id/cancel_action"
            android:layout_below="@+id/saveMealButton"
            android:text="@string/cancel_button_text"
            style="@style/wideButtonStyle"/>
    </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
