<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_new_daily_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dell.menu.screens.menus.addOrEditMenu.createNewDailyMenu.CreateNewDailyMenuActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/dateEditText"
        android:hint="@string/date_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/breakfastRelativeLayout"
        android:layout_below="@+id/dateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   <TextView
       android:id="@+id/breakfastTextView"
       android:text="@string/breakfast"
       android:textSize="20dp"
       android:paddingTop="10dp"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/addMealForBreakfastImageButton"
        android:src="@drawable/ic_add"
        style="@style/AddingButtonStyle"/>

    <TextView
        android:id="@+id/breakfastElementsTextView"
        android:layout_below="@+id/breakfastTextView"
        tools:text="scrambled eggs, bread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/lunchRelativeLayout"
        android:layout_below="@+id/breakfastRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/lunchTextView"
        android:text="@string/lunch"
        android:textSize="20dp"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/addMealForLunchImageButton"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_add"
        style="@style/AddingButtonStyle" />

    <TextView
        android:id="@+id/lunchElementsTextView"
        android:layout_below="@+id/lunchTextView"
        tools:text="scrambled eggs, bread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/dinnerRelativeLayout"
        android:layout_below="@+id/lunchRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dinnerTextView"
            android:text="@string/dinner"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/addMealForDinnerImageButton"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_add"
            style="@style/AddingButtonStyle" />

        <TextView
            android:id="@+id/dinnerElementsTextView"
            android:layout_below="@+id/dinnerTextView"
            tools:text="scrambled eggs, bread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/teatimeRelativeLayout"
        android:layout_below="@+id/dinnerRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/teatimeTextView"
            android:text="@string/teatime"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/addMealForTeatimeImageButton"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_add"
            style="@style/AddingButtonStyle" />

        <TextView
            android:id="@+id/teatimeElementsTextView"
            android:layout_below="@+id/teatimeTextView"
            tools:text="scrambled eggs, bread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/supperRelativeLayout"
        android:layout_below="@+id/teatimeRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/supperTextView"
            android:text="@string/supper"
            android:textSize="20dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/addMealForSupperImageButton"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_add"
            style="@style/AddingButtonStyle" />

        <TextView
            android:id="@+id/supperElementsTextView"
            android:layout_below="@+id/supperTextView"
            tools:text="scrambled eggs, bread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <Button
        android:id="@+id/saveDailyMenuButton"
        android:text="@string/save_button_text"
        android:layout_below="@+id/supperRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/cancel_action"
        android:text="@string/cancel_button_text"
        android:layout_below="@+id/saveDailyMenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>

</RelativeLayout>
