<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingStart="20dp"
    android:paddingRight="20dp"
    android:paddingEnd="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/addProductsLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/add_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/addProductsButton"
                    android:background="@color/colorAccent"
                    android:src="@drawable/ic_add"
                    android:contentDescription="@string/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/boughtProductsLayout"
                android:orientation="vertical"
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/boughtProductsLabel"
                    android:text="@string/already_bought_products"
                    android:textSize="20sp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.RecyclerView
                    android:focusableInTouchMode="true"
                    android:id="@+id/boughtProductsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/productsToBuyLayout"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/products_to_buy"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <android.support.v7.widget.RecyclerView
                    android:focusableInTouchMode="true"
                    android:id="@+id/productsToBuyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/productsOnShoppingListLayout"
                android:orientation="vertical"
                android:layout_marginBottom="30dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/products_already_on_shopping_lists"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.RecyclerView
                    android:focusableInTouchMode="true"
                    android:id="@+id/productsOnShoppingListRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/eatenProductsLayout"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/eaten_products"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.RecyclerView
                    android:focusableInTouchMode="true"
                    android:id="@+id/eatenProductsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notEatenProductsLayout"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_marginBottom="30dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/not_eaten_products"
                    android:layout_marginBottom="4dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.RecyclerView
                    android:focusableInTouchMode="true"
                    android:id="@+id/notEatenProductsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>