<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_add_or_edit_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/appBackgroundColor"
    tools:context="com.example.dell.menu.screens.products.addOrEdit.AddOrEditProductActivity">

    <EditText
        android:id="@+id/addedProductName"
        android:hint="@string/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/addedProductNumbOfKcal"
        android:hint="@string/number_of_kcal_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/selectTypeTextView"
            android:text="Select product type"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/addedProductTypes"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_width="0dp"
        android:paddingLeft="30dp"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/selectTypeTextView"
        android:layout_height="wrap_content"></Spinner>

        <TextView
            android:id="@+id/selectStorageTypeTextView"
            android:layout_below="@+id/selectTypeTextView"
            android:text="Select storage type"
            android:textSize="15dp"
            android:paddingTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/addedProductStorageTypes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:paddingLeft="30dp"
        android:layout_toRightOf="@+id/selectStorageTypeTextView"
        android:layout_below="@+id/addedProductTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>


    <Button
        android:layout_marginTop="70dp"
        android:id="@+id/saveProductButton"
        android:layout_below="@+id/selectStorageTypeTextView"
        android:text="@string/save_button_text"
        style="@style/wideButtonStyle"/>

    <Button
        android:layout_below="@+id/saveProductButton"
        android:layout_gravity="center_vertical"
        android:id="@+id/cancelButton"
        android:text="@string/cancel_button_text"
        style="@style/wideButtonStyle"/>
    </RelativeLayout>
</LinearLayout>
